Adding ability to customize VM args for WebStart